...
            .padding(24.dp),
        horizontalAlignment = Alignment.CenterHorizontally,
        verticalArrangement = Arrangement.spacedBy(24.dp),
    ) {
        DefaultTextField(
            modifier = Modifier.fillMaxWidth(),
            textFieldTag = "title_textField",
            titleText = "제목 *",
            value = title,
            onValueChange = onTitleChange,
            hintText = "태스크 제목을 입력하세요",
            defaultSupportingText = null,
            validate = {
...
