...
    modifier: Modifier = Modifier,
) {
    val isTagError = isTagCountError || isTagFormatError
    val tagErrorMessage = when {
        isTagCountError -> "태그는 5자 이내로 5개까지만 등록할 수 있습니다."
        isTagFormatError -> "태그 형식이 올바르지 않습니다."
        else -> "5자 이내의 태그를 최대 5개까지 등록할 수 있습니다."
    }

    Column(
        modifier = modifier
            .clip(RoundedCornerShape(10.dp))
            .background(Color.White)
...
        modifier = modifier,
    ) {
        TaskDialogTextField(
            value = titleValue,
            onValueChanged = onTitleChanged,
            isError = isTitleError,
            placeholder = "태스크 제목을 입력하세요.",
            maxLines = 1,
        )

        if (isTitleError) {
            Text(
                text = "제목을 입력해 주세요.",
...
